kustomize/overlay/7.0/obdemo/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rs
  annotations:
    cert-manager.io/cluster-issuer: $(CERT_ISSUER)
spec:
  rules:
  - host: $(FQDN)
    http:
      paths:
      - backend:
          serviceName: ig
          servicePort: 8080
        path: /rs/?(.*)
  tls:
  - hosts:
    - $(FQDN)
    secretName: sslcert
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: as
  annotations:
    cert-manager.io/cluster-issuer: $(CERT_ISSUER)
spec:
  rules:
  - host: $(FQDN)
    http:
      paths:
      - backend:
          serviceName: ig
          servicePort: 8080
        path: /as/?(.*)
  tls:
  - hosts:
    - $(FQDN)
    secretName: sslcert
